Infrastructure/k8s/3-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: dotnet-app
spec:
  selector:
    app: postgres
  ports:
    - name: psql
      port: 5432
      targetPort: 5432
