Infrastructure/k8s/6-dotnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
  namespace: dotnet-app
spec:
  selector:
    app: dotnet-weather
  ports:
    - name: http
      port: 80
      targetPort: 80
