Infrastructure/k8s/7-dotnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-ingress
  namespace: dotnet-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: dotnet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-service
                port:
                  number: 80
